k8-manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "multitanentapp"
  labels:
    name: "multitanentapp"
