k8-manifest/chat-api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-clusterip
  annotations:
    cloud.google.com/backend-config: '{"default": "chat-api-backend"}'
  namespace: multitanentapp
spec:
  selector:
    app: chat-api
  ports:
  - name: tcp
    port: 80
    targetPort: 8080
  type: ClusterIP
