k8-manifest/user-api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-clusterip
  annotations:
    cloud.google.com/backend-config: '{"default": "user-api-backend"}'
  namespace: multitanentapp
spec:
  selector:
    app: user-api
  ports:
  - name: tcp
    port: 80
    targetPort: 8082
  type: ClusterIP
